--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,12 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/APIUpdater/
-/[Ll]ibrary/Artifacts/
-/[Ll]ibrary/BuildPlayerData/
-/[Ll]ibrary/PackageCache/
-/[Ll]ibrary/PackageManager/
-/[Ll]ibrary/PlayerDataCache/
-/[Ll]ibrary/ScriptAssemblies/
-/[Ll]ibrary/ShaderCache/
-/[Ll]ibrary/TempArtifacts/
-/[Ll]ibrary/UIElements/
+/[Ll]ibrary/APIUpdater/*
+/[Ll]ibrary/Artifacts/*
+/[Ll]ibrary/BuildPlayerData/*
+/[Ll]ibrary/PackageCache/*
+/[Ll]ibrary/PackageManager/*
+/[Ll]ibrary/PlayerDataCache/*
+/[Ll]ibrary/ScriptAssemblies/*
+/[Ll]ibrary/ShaderCache/*
+/[Ll]ibrary/TempArtifacts/*
